--- a/NIBMConnect/com/nibm/storyboards/Base.lproj/Main.storyboard
+++ b/NIBMConnect/com/nibm/storyboards/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="191" y="20"/>
+            <point key="canvasLocation" x="189.85507246376812" y="19.419642857142858"/>
         </scene>
         <!--Home-->
         <scene sceneID="45G-PS-PIE">
