--- a/NIBMConnect/com/nibm/storyboards/Login.storyboard
+++ b/NIBMConnect/com/nibm/storyboards/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VGW-B7-p7k">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vv8-kM-bhg">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,23 +18,86 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VEA-nH-boQ" customClass="GIDSignInButton">
-                                <rect key="frame" x="87" y="410" width="240" height="66"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Uf-tl-sKy" userLabel="E mail">
+                                <rect key="frame" x="20" y="134" width="374" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" textContentType="email"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AZ5-Kb-DRr" userLabel="Password">
+                                <rect key="frame" x="20" y="194" width="374" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IEJ-9c-LQs">
+                                <rect key="frame" x="95" y="264" width="224" height="40"/>
+                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="VVI-RX-jgF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="signIncustom:" destination="vv8-kM-bhg" eventType="touchUpInside" id="Scn-8g-G8G"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VEA-nH-boQ" customClass="GIDSignInButton">
+                                <rect key="frame" x="40" y="364" width="334" height="66"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="iwC-Pp-mkQ"/>
+                                </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7wa-DI-Lc9">
+                                <rect key="frame" x="20" y="554" width="149" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Forget Password ?"/>
+                                <connections>
+                                    <segue destination="vqG-Bp-b7g" kind="show" id="Rwe-3v-Mmw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VEA-nH-boQ" firstAttribute="centerX" secondItem="98a-RY-qPu" secondAttribute="centerX" id="4wF-Xx-g1s"/>
+                            <constraint firstItem="AZ5-Kb-DRr" firstAttribute="height" secondItem="9Uf-tl-sKy" secondAttribute="height" id="93z-fp-fJb"/>
+                            <constraint firstItem="IEJ-9c-LQs" firstAttribute="top" secondItem="AZ5-Kb-DRr" secondAttribute="bottom" constant="40" id="Baz-qF-Fdr"/>
+                            <constraint firstItem="AE0-G7-rnj" firstAttribute="trailing" secondItem="9Uf-tl-sKy" secondAttribute="trailing" constant="20" id="Czb-D3-KPI"/>
+                            <constraint firstItem="AZ5-Kb-DRr" firstAttribute="width" secondItem="9Uf-tl-sKy" secondAttribute="width" id="LiR-k9-Ofn"/>
+                            <constraint firstItem="AZ5-Kb-DRr" firstAttribute="top" secondItem="9Uf-tl-sKy" secondAttribute="bottom" constant="30" id="OzC-ob-kbX"/>
+                            <constraint firstItem="9Uf-tl-sKy" firstAttribute="top" secondItem="AE0-G7-rnj" secondAttribute="top" constant="90" id="Sb4-HM-JbP"/>
+                            <constraint firstItem="9Uf-tl-sKy" firstAttribute="leading" secondItem="AE0-G7-rnj" secondAttribute="leading" constant="20" id="TVS-ID-xsZ"/>
+                            <constraint firstItem="IEJ-9c-LQs" firstAttribute="width" secondItem="AZ5-Kb-DRr" secondAttribute="width" multiplier="0.6" id="Uh5-Bm-ucv"/>
+                            <constraint firstItem="IEJ-9c-LQs" firstAttribute="centerX" secondItem="98a-RY-qPu" secondAttribute="centerX" id="Xig-ob-hoV"/>
+                            <constraint firstItem="9Uf-tl-sKy" firstAttribute="centerX" secondItem="98a-RY-qPu" secondAttribute="centerX" id="bTJ-Gt-evZ"/>
+                            <constraint firstItem="AZ5-Kb-DRr" firstAttribute="centerX" secondItem="98a-RY-qPu" secondAttribute="centerX" id="cQ8-Rv-0NV"/>
+                            <constraint firstItem="VEA-nH-boQ" firstAttribute="top" secondItem="IEJ-9c-LQs" secondAttribute="bottom" constant="60" id="cst-IK-0z2"/>
+                            <constraint firstItem="VEA-nH-boQ" firstAttribute="leading" secondItem="AE0-G7-rnj" secondAttribute="leading" constant="40" id="j6E-TJ-ATx"/>
+                            <constraint firstItem="AE0-G7-rnj" firstAttribute="trailing" secondItem="VEA-nH-boQ" secondAttribute="trailing" constant="40" id="v9M-Av-hyB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="AE0-G7-rnj"/>
                     </view>
                     <navigationItem key="navigationItem" id="gnE-RC-dE1"/>
                     <connections>
-                        <segue destination="vqG-Bp-b7g" kind="show" identifier="showForgetPassword" id="E5L-Yf-fxt"/>
+                        <outlet property="email" destination="9Uf-tl-sKy" id="teq-46-Pgw"/>
+                        <outlet property="login" destination="IEJ-9c-LQs" id="ZdO-zQ-jSy"/>
+                        <outlet property="password" destination="AZ5-Kb-DRr" id="mJt-vH-DFj"/>
+                        <segue destination="JyB-ET-uw0" kind="show" identifier="showHome" id="mT5-CJ-chH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zIs-Iq-zXn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1131.8840579710145" y="126.5625"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="zyN-5j-fnp">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="JyB-ET-uw0" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0tl-jm-Wg8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2171" y="-219"/>
         </scene>
         <!--Forget Password View Controller-->
         <scene sceneID="B8E-YN-haM">
@@ -43,31 +106,42 @@
                     <view key="view" contentMode="scaleToFill" id="2Xs-ED-NZI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cqh-ex-MP4">
+                                <rect key="frame" x="20" y="168" width="374" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F7b-46-zIG">
+                                <rect key="frame" x="20" y="86" width="50" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Close"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wmd-iI-t4b">
+                                <rect key="frame" x="147" y="254" width="120" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Get Password">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cqh-ex-MP4" firstAttribute="leading" secondItem="WVg-KA-SnS" secondAttribute="leading" constant="20" id="2LB-r0-3kD"/>
+                            <constraint firstItem="cqh-ex-MP4" firstAttribute="centerX" secondItem="2Xs-ED-NZI" secondAttribute="centerX" id="H9I-Wb-Acm"/>
+                            <constraint firstItem="cqh-ex-MP4" firstAttribute="top" secondItem="WVg-KA-SnS" secondAttribute="top" constant="124" id="iQy-FT-oY0"/>
+                            <constraint firstItem="WVg-KA-SnS" firstAttribute="trailing" secondItem="cqh-ex-MP4" secondAttribute="trailing" constant="20" id="zbt-yB-HLi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="WVg-KA-SnS"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DAK-L1-sVW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1949" y="129"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="9uU-28-Fkm">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VGW-B7-p7k" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NjS-TV-HUA">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="vv8-kM-bhg" kind="relationship" relationship="rootViewController" id="rzl-lr-Bsv"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mdx-ah-9Oy" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="221.73913043478262" y="126.5625"/>
+            <point key="canvasLocation" x="2213" y="419"/>
         </scene>
     </scenes>
 </document>
